# book-library

./: .gitignore  README.md
backend/: .env  LIST.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2360b89a8c74_create_books_table.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: dependencies.py  session.py
backend/app/models/: __init__.py  book.py
backend/app/schemas/: __init__.py  book.py
backend/app/services/: books.py
backend/tests/: test_health.py
docs/: API_CONTRACT.md  ARCHITECTURE.md
mobile/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/api/: contracts.ts  mockData.ts
work/: HANDOFF.md  TUTOR_MODE.md
