[project]
name = "library-scanner-backend"
version = "0.1.0"
description = "Backend for a personal library scanner app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
